--- a/sluzby.html
+++ b/sluzby.html
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid no-padd top-banner categories light">
+                <div class="container-fluid no-padd mid-banner categories light">
                         <span class="overlay"></span>
                         <img src="images/prouzek.jpeg" class="cover-background position-absolute top-0 start-0 w-100 h-100" style="object-fit: cover;" alt="main banner image" id="interiery"/>
                         <div class="row align-items-center h-100 justify-content-center">
@@ -112,7 +112,7 @@ Po setkání ode mě obdržíte přehlednou cenovou nabídku a návrh spoluprác
             
             
             <!-- end section -->
-              <div class="container-fluid no-padd top-banner categories light">
+              <div class="container-fluid no-padd mid-banner categories light">
                         <span class="overlay"></span>
                         <img src="images/prouzek2.jpeg" class="cover-background position-absolute top-0 start-0 w-100 h-100" style="object-fit: cover;" alt="main banner image" id="interiery"/>
                         <div class="row align-items-center h-100 justify-content-center">
