--- a/sluzby.html
+++ b/sluzby.html
@@ -75,17 +75,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid no-padd mid-banner top-banner categories light">
-                        <span class="overlay"></span>
-                        <img src="images/prouzek.jpeg" class="cover-background position-absolute top-0 start-0 w-100 h-100" style="object-fit: cover;" alt="main banner image" id="interiery"/>
-                        <div class="row align-items-center h-100 justify-content-center">
-                            <div class="content">
-                                <div class="subtitle fw-0">TVOŘÍM INTERIÉRY S DUŠÍ, KAŽDÝ PROSTOR MÁ SVŮJ PŘÍBĚH - NAPIŠTE SPOLU SE MNOU TEN SVŮJ</div>
-                                <h1 class="title text-gradient-gold fw-100">SLUŽBY</h1>
-                            </div>
-                        </div>
-                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- start section -->
       <section>
+        <div class="image-strip d-flex align-items-center" style="background-image: url('images/prouzek.jpeg');">
+            <div class="container">
+                <div class="row w-100">
+                    <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
+                         <h2 class="strip-title">SLUŽBY</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
                             <div class="col-xl-5 col-lg-6 offset-lg-1 text-center text-lg-start">
