section size change

--- a/sluzby.html
+++ b/sluzby.html
@@ -85,16 +85,16 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">SLUŽBY</h2>
+                         <h2 class="strip-title">1) KONZULTACE</h2>
                     </div>
                 </div>
             </div>
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
-                            <div class="col-xl-5 col-lg-6 offset-lg-1 text-center text-lg-start">
-                            <h3 class="fw-300 text-gradient-gold ls-minus-2px mb-5px">1) KONZULTACE</h3> 
-                            <span class="alt-font fs-18 mb-20px d-block text-dark-gray fw-500"></span>
+                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-center text-lg-start">
+
+                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-dark-gray fw-500"></span>
                             <p class="mb-15px">Úvodní konzultace je první, zcela nezávazný krok k domovu, který bude odrážet vás – vaši osobnost, potřeby i sny. Ať už máte jasnou vizi, kterou chcete pomoci realizovat, nebo pocit, že by váš prostor zasloužil proměnu – jsem tu pro vás.
 
                                 </p>
@@ -104,7 +104,7 @@
                                 </p>
                                 <p class="mb-15px">Součástí konzultace je také zaměření a zajištění kvót, které jsou základem pro další návrh.
 
-Po setkání ode mě obdržíte přehlednou cenovou nabídku a návrh spolupráce. Celý proces je postavený na důvěře, otevřenosti a pocitu, že tvoříme prostor, kde bude dobře vám i celé vaší rodině.
+                                    Po setkání ode mě obdržíte přehlednou cenovou nabídku a návrh spolupráce. Celý proces je postavený na důvěře, otevřenosti a pocitu, že tvoříme prostor, kde bude dobře vám i celé vaší rodině.
 
 
                                 </p>
