--- a/sluzby.html
+++ b/sluzby.html
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">1) KONZULTACE</h2>
+                         <h2 class="strip-title">KONZULTACE</h2>
                          <small style="font-size:1rem; font-weight:100;">5.000 Kč / 1 hod</small>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">2) 2D DISPOZICE</h2>
+                         <h2 class="strip-title">2D DISPOZICE</h2>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">3)3D VIZUALIZACE </h2>
+                         <h2 class="strip-title">3D VIZUALIZACE </h2>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">4) REALIZACE</h2>
+                         <h2 class="strip-title">REALIZACE</h2>
                     </div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">5) DEKOROVÁNÍ </h2>
+                         <h2 class="strip-title">DEKOROVÁNÍ </h2>
                     </div>
                 </div>
             </div>
@@ -232,7 +232,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">6) DĚTSKÝ SEN</h2>
+                         <h2 class="strip-title">DĚTSKÝ SEN</h2>
                     </div>
                 </div>
             </div>
