--- a/sluzby.html
+++ b/sluzby.html
@@ -86,7 +86,7 @@
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">KONZULTACE</h2>
-                         <small style="font-size:1rem; font-weight:100;">5.000 Kč / 1 hod</small>
+                         <small style="font-size:1rem; font-weight:100; color: white;">5.000 Kč / 1 hod</small>
                     </div>
                 </div>
             </div>
