--- a/sluzby.html
+++ b/sluzby.html
@@ -121,6 +121,7 @@
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">2D DISPOZICE</h2>
+                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
@@ -150,6 +151,7 @@
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">3D VIZUALIZACE </h2>
+                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
@@ -179,6 +181,7 @@
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">REALIZACE</h2>
+                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
@@ -208,6 +211,7 @@
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">DEKOROVÁNÍ </h2>
+                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
@@ -233,6 +237,7 @@
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">DĚTSKÝ SEN</h2>
+                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
