--- a/sluzby.html
+++ b/sluzby.html
@@ -84,7 +84,7 @@
         <div class="image-strip d-flex align-items-center" style="background-image: url('images/prouzek.jpeg');">
             <div class="container">
                 <div class="row w-100">
-                    <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
+                    <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">KONZULTACE</h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">5.000 Kč / 1 hod</small>
                     </div>
@@ -119,7 +119,7 @@
         <div class="image-strip d-flex align-items-center" style="background-image: url('images/prouzek2.jpeg');">
             <div class="container">
                 <div class="row w-100">
-                    <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
+                    <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">2D DISPOZICE</h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
@@ -149,7 +149,7 @@
         <div class="image-strip d-flex align-items-center" style="background-image: url('images/prouzek.jpeg');">
             <div class="container">
                 <div class="row w-100">
-                    <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
+                    <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">3D VIZUALIZACE </h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
@@ -179,7 +179,7 @@
         <div class="image-strip d-flex align-items-center" style="background-image: url('images/prouzek2.jpeg');">
             <div class="container">
                 <div class="row w-100">
-                    <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
+                    <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">REALIZACE</h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
@@ -209,8 +209,8 @@
         <div class="image-strip d-flex align-items-center" style="background-image: url('images/prouzek.jpeg');">
             <div class="container">
                 <div class="row w-100">
-                    <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">DEKOROVÁNÍ </h2>
+                    <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
+                         <h2 class="strip-title text-base-color">DEKOROVÁNÍ </h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
         <div class="image-strip d-flex align-items-center" style="background-image: url('images/prouzek2.jpeg');">
             <div class="container">
                 <div class="row w-100">
-                    <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
+                    <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title">DĚTSKÝ SEN</h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
