--- a/sluzby.html
+++ b/sluzby.html
@@ -93,7 +93,7 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-center text-lg-start">
+                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-center text-base-color text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
                             <p class="mb-15px">Úvodní konzultace je první, zcela nezávazný krok k domovu, který bude odrážet vás – vaši osobnost, potřeby i sny. Ať už máte jasnou vizi, kterou chcete pomoci realizovat, nebo pocit, že by váš prostor zasloužil proměnu – jsem tu pro vás.
