text base color

--- a/sluzby.html
+++ b/sluzby.html
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">KONZULTACE</h2>
+                         <h2 class="strip-title text-base-color">KONZULTACE</h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">5.000 Kč / 1 hod</small>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">2D DISPOZICE</h2>
+                         <h2 class="strip-title text-base-color">2D DISPOZICE</h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">3D VIZUALIZACE </h2>
+                         <h2 class="strip-title text-base-color">3D VIZUALIZACE </h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">REALIZACE</h2>
+                         <h2 class="strip-title text-base-color">REALIZACE</h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title">DĚTSKÝ SEN</h2>
+                         <h2 class="strip-title text-base-color">DĚTSKÝ SEN</h2>
                          <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
