--- a/sluzby.html
+++ b/sluzby.html
@@ -93,17 +93,17 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-center text-base-color text-lg-start">
+                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
-                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
-                            <p class="mb-15px">Úvodní konzultace je první, zcela nezávazný krok k domovu, který bude odrážet vás – vaši osobnost, potřeby i sny. Ať už máte jasnou vizi, kterou chcete pomoci realizovat, nebo pocit, že by váš prostor zasloužil proměnu – jsem tu pro vás.
-
-                                </p>
-                                 <p class="mb-15px">Ráda vás nasměruji, pokud tápete ve stylu, barvách nebo rozvržení. Pomohu najít to pravé, co bude nejen krásné, ale i funkční a přirozené. Pokud už naopak víte přesně, co chcete, podpořím vás v realizaci té představy – s citem, estetikou a profesionalitou.
-
+                            <span class="alt-font fs-18 mt-50px mb-20px d-block  fw-500"></span>
+                            <p class="mb-15px text-base-color">Úvodní konzultace je první, zcela nezávazný krok k domovu, který bude odrážet vás – vaši osobnost, potřeby i sny. Ať už máte jasnou vizi, kterou chcete pomoci realizovat, nebo pocit, že by váš prostor zasloužil proměnu – jsem tu pro vás.
 
                                 </p>
-                                <p class="mb-15px">Součástí konzultace je také zaměření a zajištění kvót, které jsou základem pro další návrh.
+                                 <p class="mb-15px text-base-color">Ráda vás nasměruji, pokud tápete ve stylu, barvách nebo rozvržení. Pomohu najít to pravé, co bude nejen krásné, ale i funkční a přirozené. Pokud už naopak víte přesně, co chcete, podpořím vás v realizaci té představy – s citem, estetikou a profesionalitou.
+
+
+                                </p>
+                                <p class="mb-15px text-base-color">Součástí konzultace je také zaměření a zajištění kvót, které jsou základem pro další návrh.
 
                                     Po setkání ode mě obdržíte přehlednou cenovou nabídku a návrh spolupráce. Celý proces je postavený na důvěře, otevřenosti a pocitu, že tvoříme prostor, kde bude dobře vám i celé vaší rodině.
 
@@ -128,13 +128,13 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-center text-lg-start">
+                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
-                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-dark-gray fw-500"></span>
-                            <p class="mb-15px">Na základě přesného zaměření a zajištění kvót nebo vaší projektové dokumentace připravuji detailní 2D dispoziční řešení. To je základem celého návrhu – a právě tady ukážu, jak lze prostor maximálně využít.<br>Zohledňuji nejen estetiku, ale i každodenní fungování – pohyb po bytě, logiku rozmístění nábytku, vztahy mezi místnostmi i přirozené světlo.
+                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
+                            <p class="mb-15px text-base-color">Na základě přesného zaměření a zajištění kvót nebo vaší projektové dokumentace připravuji detailní 2D dispoziční řešení. To je základem celého návrhu – a právě tady ukážu, jak lze prostor maximálně využít.<br>Zohledňuji nejen estetiku, ale i každodenní fungování – pohyb po bytě, logiku rozmístění nábytku, vztahy mezi místnostmi i přirozené světlo.
 
                                 </p>
-                                 <p class="mb-15px"> Díky zkušenostem navrhuji dispozice, které mají hlavu a patu – elegantní, ale zároveň promyšlené do posledního centimetru. Tak, abyste se doma cítili svobodně, klidně a opravdu doma.
+                                 <p class="mb-15px text-base-color"> Díky zkušenostem navrhuji dispozice, které mají hlavu a patu – elegantní, ale zároveň promyšlené do posledního centimetru. Tak, abyste se doma cítili svobodně, klidně a opravdu doma.
 
 
                                 </p>
@@ -158,13 +158,13 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-center text-lg-start">
+                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
-                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-dark-gray fw-500"></span>
-                            <p class="mb-15px">Jak bude váš domov vypadat? Jak se v něm budete cítit? Odpovědi přináší realistické 3D vizualizace, které tvořím na základě schváleného půdorysu. <br>Vizualizace není jen o efektním pohledu – je to nástroj, jak vám přiblížit atmosféru budoucího interiéru. Pracuji s hmotou nábytku, barvami, strukturami, světlem i detaily. Vše navrhuji tak, aby interiér působil harmonicky, autenticky a s duší.
+                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
+                            <p class="mb-15px text-base-color">Jak bude váš domov vypadat? Jak se v něm budete cítit? Odpovědi přináší realistické 3D vizualizace, které tvořím na základě schváleného půdorysu. <br>Vizualizace není jen o efektním pohledu – je to nástroj, jak vám přiblížit atmosféru budoucího interiéru. Pracuji s hmotou nábytku, barvami, strukturami, světlem i detaily. Vše navrhuji tak, aby interiér působil harmonicky, autenticky a s duší.
 
                                 </p>
-                                 <p class="mb-15px">Každý návrh odráží osobnost klienta – neexistují dvě stejné domácnosti. Tvořím osobité interiéry, ve kterých se cítíte přirozeně a opravdově.
+                                 <p class="mb-15px text-base-color">Každý návrh odráží osobnost klienta – neexistují dvě stejné domácnosti. Tvořím osobité interiéry, ve kterých se cítíte přirozeně a opravdově.
 
 
                                 </p>
@@ -188,13 +188,13 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-center text-lg-start">
+                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
-                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-dark-gray fw-500"></span>
-                            <p class="mb-15px"> Realizace je chvíle, kdy se návrhy mění ve skutečnost. Celý proces – od výroby nábytku na míru přes výběr dodavatelů až po závěrečné doladění – zajišťuji osobně. Komunikuji s truhláři I řemeslníky a hlídám časový harmonogram, kvalitu i estetický výsledek.
+                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
+                            <p class="mb-15px text-base-color"> Realizace je chvíle, kdy se návrhy mění ve skutečnost. Celý proces – od výroby nábytku na míru přes výběr dodavatelů až po závěrečné doladění – zajišťuji osobně. Komunikuji s truhláři I řemeslníky a hlídám časový harmonogram, kvalitu i estetický výsledek.
 
                                 </p>
-                                 <p class="mb-15px">Moje role tu ale nekončí u technické koordinace – právě naopak. Dekorování a finální atmosféru interiéru si beru osobně na starost.<br> S láskou vybírám detaily, které nejsou běžně k vidění – osobité umělecké prvky, často ručně vyráběné, které dokonale rezonují s daným prostorem a rodinou, která v něm bude žít.
+                                 <p class="mb-15px text-base-color">Moje role tu ale nekončí u technické koordinace – právě naopak. Dekorování a finální atmosféru interiéru si beru osobně na starost.<br> S láskou vybírám detaily, které nejsou běžně k vidění – osobité umělecké prvky, často ručně vyráběné, které dokonale rezonují s daným prostorem a rodinou, která v něm bude žít.
 
 
                                 </p>
@@ -218,10 +218,10 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-center text-lg-start">
+                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
-                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-dark-gray fw-500"></span>
-                            <p class="mb-15px">Dekorování je finálním, ale často nejdůležitějším krokem celého procesu. Právě zde interiér získává hloubku, emoci a duši. Vybírám dekorace, které nejsou jen krásné, ale také autentické – a často vznikají na míru přímo pro konkrétní domov.
+                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
+                            <p class="mb-15px text-base-color">Dekorování je finálním, ale často nejdůležitějším krokem celého procesu. Právě zde interiér získává hloubku, emoci a duši. Vybírám dekorace, které nejsou jen krásné, ale také autentické – a často vznikají na míru přímo pro konkrétní domov.
 
                                 </p>
                                
@@ -244,13 +244,13 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-center text-lg-start">
+                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
-                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-dark-gray fw-500"></span>
-                            <p class="mb-15px">  Tvořit dětské pokoje je pro mě víc než jen práce. Je to radost, srdeční záležitost a kreativní svět, do kterého se pokaždé s nadšením vracím. <br>
+                            <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
+                            <p class="mb-15px text-base-color">  Tvořit dětské pokoje je pro mě víc než jen práce. Je to radost, srdeční záležitost a kreativní svět, do kterého se pokaždé s nadšením vracím. <br>
 
                                 </p>
-                                 <p class="mb-15px">Pokoje tvořím tak, aby byly nejen krásné, ale i funkční – s důrazem na úložné prostory, zóny pro hraní, učení i klid, které přirozeně podporují zdravý vývoj dítěte. Ve spolupráci s truhláři a ověřenými dodavateli navrhuji řešení na míru, která odpovídají věku, zájmům i potřebám dětí.<br>Ať už je vaše dítě snílek, objevitel, nebo malý umělec – vytvořím prostor, ve kterém bude každý den dobrodružstvím. Miluji ten moment, kdy se dítě poprvé rozhlédne po svém novém pokoji – a svět, který si vysnilo, se stane skutečností... a není jen snem. ☺️
+                                 <p class="mb-15px text-base-color">Pokoje tvořím tak, aby byly nejen krásné, ale i funkční – s důrazem na úložné prostory, zóny pro hraní, učení i klid, které přirozeně podporují zdravý vývoj dítěte. Ve spolupráci s truhláři a ověřenými dodavateli navrhuji řešení na míru, která odpovídají věku, zájmům i potřebám dětí.<br>Ať už je vaše dítě snílek, objevitel, nebo malý umělec – vytvořím prostor, ve kterém bude každý den dobrodružstvím. Miluji ten moment, kdy se dítě poprvé rozhlédne po svém novém pokoji – a svět, který si vysnilo, se stane skutečností... a není jen snem. ☺️
 
 
                                 </p>
