text change and alignment

--- a/sluzby.html
+++ b/sluzby.html
@@ -86,13 +86,13 @@
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title text-base-color">KONZULTACE</h2>
-                         <small style="font-size:1rem; font-weight:100; color: white;">5.000 Kč / 1 hod</small>
+                         <small class="text-base-color" style="font-size:1rem; font-weight:100;">5.000 Kč / 1 hod</small>
                     </div>
                 </div>
             </div>
         </div>
                 <div class="container">
-                    <div class="row align-items-center justify-content-center">
+                    <div class="row align-items-center justify-content-left">
                             <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block  fw-500"></span>
@@ -121,13 +121,13 @@
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title text-base-color">2D DISPOZICE</h2>
-                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
+                         <small class="text-base-color" style="font-size:1rem; font-weight:100;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
         </div>
                 <div class="container">
-                    <div class="row align-items-center justify-content-center">
+                    <div class="row align-items-center justify-content-left">
                             <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
@@ -151,13 +151,13 @@
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title text-base-color">3D VIZUALIZACE </h2>
-                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
+                         <small style="font-size:1rem; font-weight:100;" class="text-base-color">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
         </div>
                 <div class="container">
-                    <div class="row align-items-center justify-content-center">
+                    <div class="row align-items-center justify-content-left">
                             <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
@@ -181,13 +181,13 @@
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title text-base-color">REALIZACE</h2>
-                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
+                         <small style="font-size:1rem; font-weight:100;" class="text-base-color">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
         </div>
                 <div class="container">
-                    <div class="row align-items-center justify-content-center">
+                    <div class="row align-items-center justify-content-left">
                             <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
@@ -217,7 +217,7 @@
             </div>
         </div>
                 <div class="container">
-                    <div class="row align-items-center justify-content-center">
+                    <div class="row align-items-center justify-content-left">
                             <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
@@ -243,7 +243,7 @@
             </div>
         </div>
                 <div class="container">
-                    <div class="row align-items-center justify-content-center">
+                    <div class="row align-items-center justify-content-left">
                             <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
