--- a/sluzby.html
+++ b/sluzby.html
@@ -211,7 +211,7 @@
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title text-base-color">DEKOROVÁNÍ </h2>
-                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
+                         <small style="font-size:1rem; font-weight:100;" class="text-base-color">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                 <div class="row w-100">
                     <div class="col text-start"> <!-- změň na text-end pro pravou stranu -->
                          <h2 class="strip-title text-base-color">DĚTSKÝ SEN</h2>
-                         <small style="font-size:1rem; font-weight:100; color: white;">cena je stanovena individuálně dle rozsahu práce</small>
+                         <small style="font-size:1rem; font-weight:100" class="text-base-color">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
             </div>
