offset-lg-1 del

--- a/sluzby.html
+++ b/sluzby.html
@@ -93,7 +93,7 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-left">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
+                            <div class="col-xl-12 col-lg-10   text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block  fw-500"></span>
                             <p class="mb-15px text-base-color">Úvodní konzultace je první, zcela nezávazný krok k domovu, který bude odrážet vás – vaši osobnost, potřeby i sny. Ať už máte jasnou vizi, kterou chcete pomoci realizovat, nebo pocit, že by váš prostor zasloužil proměnu – jsem tu pro vás.
@@ -128,7 +128,7 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-left">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
+                            <div class="col-xl-12 col-lg-10   text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
                             <p class="mb-15px text-base-color">Na základě přesného zaměření a zajištění kvót nebo vaší projektové dokumentace připravuji detailní 2D dispoziční řešení. To je základem celého návrhu – a právě tady ukážu, jak lze prostor maximálně využít.<br>Zohledňuji nejen estetiku, ale i každodenní fungování – pohyb po bytě, logiku rozmístění nábytku, vztahy mezi místnostmi i přirozené světlo.
@@ -158,7 +158,7 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-left">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
+                            <div class="col-xl-12 col-lg-10   text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
                             <p class="mb-15px text-base-color">Jak bude váš domov vypadat? Jak se v něm budete cítit? Odpovědi přináší realistické 3D vizualizace, které tvořím na základě schváleného půdorysu. <br>Vizualizace není jen o efektním pohledu – je to nástroj, jak vám přiblížit atmosféru budoucího interiéru. Pracuji s hmotou nábytku, barvami, strukturami, světlem i detaily. Vše navrhuji tak, aby interiér působil harmonicky, autenticky a s duší.
@@ -188,7 +188,7 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-left">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
+                            <div class="col-xl-12 col-lg-10   text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
                             <p class="mb-15px text-base-color"> Realizace je chvíle, kdy se návrhy mění ve skutečnost. Celý proces – od výroby nábytku na míru přes výběr dodavatelů až po závěrečné doladění – zajišťuji osobně. Komunikuji s truhláři I řemeslníky a hlídám časový harmonogram, kvalitu i estetický výsledek.
@@ -218,7 +218,7 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-left">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
+                            <div class="col-xl-12 col-lg-10  text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
                             <p class="mb-15px text-base-color">Dekorování je finálním, ale často nejdůležitějším krokem celého procesu. Právě zde interiér získává hloubku, emoci a duši. Vybírám dekorace, které nejsou jen krásné, ale také autentické – a často vznikají na míru přímo pro konkrétní domov.
@@ -244,7 +244,7 @@
         </div>
                 <div class="container">
                     <div class="row align-items-center justify-content-left">
-                            <div class="col-xl-12 col-lg-10 offset-lg-1 text-start text-lg-start">
+                            <div class="col-xl-12 col-lg-10 text-start text-lg-start">
 
                             <span class="alt-font fs-18 mt-50px mb-20px d-block text-base-color fw-500"></span>
                             <p class="mb-15px text-base-color">  Tvořit dětské pokoje je pro mě víc než jen práce. Je to radost, srdeční záležitost a kreativní svět, do kterého se pokaždé s nadšením vracím. <br>
