--- a/kontakt.html
+++ b/kontakt.html
@@ -81,17 +81,17 @@
     <div class="container w-100 no-padd">
         <div class="">
             <div class="justify-content-center">
-                <div class="heading w-80 text-center left dark ">
+                <div class="heading w-80 text-center offset-lg-1 left dark ">
                     <h2 class="title fw-100 text-gradient-gold">KONTAKTUJTE MĚ</h2>
-                    <div class="content mb-6">
+                    <div class="content mb-6 text-base-color">
                        <p>Tvořím interiéry s duší, každý prostor má svůj příběh - napište spolu se mnou ten svůj </p>
                 </div>
-                <div class="row justify-content-center text-center">
+                <div class="row justify-content-center text-center text-base-color">
                     <div class="col-xl-3 col-md-5 col-sm-6 sm-mb-20px ">
                         <div class="column-inner">
                             <div class="adddress-block  ">
 
-                                <div class="address-block-outer">
+                                <div class="address-block-outer">   
                                     <span class="separator"></span>
 
                                     <h4 class="address-title">Telefon</h4>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-5 col-sm-6 sm-mb-20px">
+                    <div class="col-xl-3 col-md-5 col-sm-6 sm-mb-20px text-base-color">
                         <div class="adddress-block  ">
 
                             <div class="address-block-outer">
@@ -116,7 +116,7 @@
                             </p></div>
                         </div>
                     </div>
-                    <div class=" col-xl-3 col-md-5 col-sm-6 sm-mb-20px">
+                    <div class=" col-xl-3 col-md-5 col-sm-6 sm-mb-20px text-base-color">
                         <div class="adddress-block">
 
                             <div class="address-block-outer">
