--- a/sluzby.html
+++ b/sluzby.html
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title text-base-color">KONZULTACE</h2>
+                         <h2 class="strip-title text-base-color">konzultace</h2>
                          <small class="text-base-color" style="font-size:1rem; font-weight:100;">5.000 Kč / 1 hod</small>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title text-base-color">2D DISPOZICE</h2>
+                         <h2 class="strip-title text-base-color">2D dispozice</h2>
                          <small class="text-base-color" style="font-size:1rem; font-weight:100;">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title text-base-color">3D VIZUALIZACE </h2>
+                         <h2 class="strip-title text-base-color">3D vizualizace </h2>
                          <small style="font-size:1rem; font-weight:100;" class="text-base-color">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title text-base-color">REALIZACE</h2>
+                         <h2 class="strip-title text-base-color">realizace</h2>
                          <small style="font-size:1rem; font-weight:100;" class="text-base-color">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title text-base-color">DEKOROVÁNÍ </h2>
+                         <h2 class="strip-title text-base-color">dekorování </h2>
                          <small style="font-size:1rem; font-weight:100;" class="text-base-color">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
             <div class="container">
                 <div class="row w-100">
                     <div class="col text-end"> <!-- změň na text-end pro pravou stranu -->
-                         <h2 class="strip-title text-base-color">DĚTSKÝ SEN</h2>
+                         <h2 class="strip-title text-base-color">dětský sen</h2>
                          <small style="font-size:1rem; font-weight:100" class="text-base-color">cena je stanovena individuálně dle rozsahu práce</small>
                     </div>
                 </div>
