--- a/kontakt.html
+++ b/kontakt.html
@@ -133,8 +133,36 @@
             </div>
        </div>   
     </div> 
-    </div> 
-
+    </div>
+    <div class="container">
+     <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0" data-anime='{ "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
+                    <!-- start client item -->
+                    <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="placehold.co/200x45" class="h-45px" alt=""></a>
+                    </div>
+                    <!-- end client item -->
+                    <!-- start client item -->
+                    <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="placehold.co/200x45" class="h-45px" alt=""></a>
+                    </div>
+                    <!-- end client item -->
+                    <!-- start client item -->
+                    <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="placehold.co/200x45" class="h-45px" alt=""></a>
+                    </div>
+                    <!-- end client item -->
+                    <!-- start client item -->
+                    <div class="col client-box text-center sm-mb-40px">
+                        <a href="#"><img src="placehold.co/200x45" class="h-45px" alt=""></a>
+                    </div> 
+                    <!-- end client item -->
+                    <!-- start client item -->
+                    <div class="col client-box text-center">
+                        <a href="#"><img src="placehold.co/200x45" class="h-45px" alt=""></a>
+                    </div> 
+                    <!-- end client item -->
+                </div>
+        </div>
     <!--/MAIN BODY-->
  <!-- START FOOTER -->
     <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.png'); background-size: cover; background-position: center; width: 100%;">
