--- a/omne.html
+++ b/omne.html
@@ -60,6 +60,24 @@
        
     </header>
         <!-- end header -->
+          <div class="container-fluid no-padd">
+            <div class="row-fluid no-padd">
+                <div class="col-sm-12 no-padd">
+                 <div class="prague-categories-outer">
+                    <div class="container-fluid no-padd top-banner categories light">
+                        <span class="overlay"></span>
+                        <img src="images/bezloga.jpg" class="cover-background position-absolute top-0 start-0 w-100 h-100" style="object-fit: cover;" alt="main banner image" id="interiery"/>
+                        <div class="row align-items-center h-100 justify-content-center">
+                            <div class="content">
+                                <div class="subtitle fw-0">TVOŘÍM INTERIÉRY S DUŠÍ, KAŽDÝ PROSTOR MÁ SVŮJ PŘÍBĚH - NAPIŠTE SPOLU SE MNOU TEN SVŮJ</div>
+                                <h1 class="title text-gradient-gold fw-100">O MNĚ</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+         </div>
       <section>
                 <div class="container">
                     <div class="row align-items-center justify-content-center">
