--- a/kontakt.html
+++ b/kontakt.html
@@ -136,7 +136,7 @@
     </div> 
     </div>
     <div class="container">
-     <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0" data-anime='{ "opacity": [0,1], "duration": 600, "delay": 0, "staggervalue": 300, "easing": "easeOutQuad" }'>
+     <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0">
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
                         <a href="#"><img src="images/drevodeko.svg" class="h-75px" alt=""></a>
