--- a/kontakt.html
+++ b/kontakt.html
@@ -136,6 +136,7 @@
     </div> 
     </div>
     <div class="container">
+           <h3 class="fw-300 text-gradient-gold ls-minus-2px justify-content-center mb-5px">PARTNEŘI REALIZACÍ</h3> 
      <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0">
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
