--- a/kontakt.html
+++ b/kontakt.html
@@ -145,22 +145,22 @@
                     <!-- end client item -->
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
-                        <a href="#"><img src="https://placehold.co/600x400" class="h-75px" alt=""></a>
+                        <a href="#"><img src="images/drevodeko.svg" class="h-75px" alt=""></a>
                     </div>
                     <!-- end client item -->
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
-                        <a href="#"><img src="https://placehold.co/600x400" class="h-75px" alt=""></a>
+                        <a href="#"><img src="images/drevodeko.svg" class="h-75px" alt=""></a>
                     </div>
                     <!-- end client item -->
                     <!-- start client item -->
-                    <div class="col client-box text-center sm-mb-40px">
-                        <a href="#"><img src="https://placehold.co/600x400" class="h-75px" alt=""></a>
-                    </div> 
+                    <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="images/drevodeko.svg" class="h-75px" alt=""></a>
+                    </div>
                     <!-- end client item -->
                     <!-- start client item -->
-                    <div class="col client-box text-center">
-                        <a href="#"><img src="https://placehold.co/600x400" class="h-75px" alt=""></a>
+                     <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="images/drevodeko.svg" class="h-75px" alt=""></a>
                     </div> 
                     <!-- end client item -->
                 </div>
