--- a/kontakt.html
+++ b/kontakt.html
@@ -82,7 +82,7 @@
     <div class="container w-100 no-padd">
         <div class="">
             <div class="justify-content-center">
-                <div class="heading w-80 text-center offset-lg-1 left dark ">
+                <div class="heading w-80 text-center offset-1 left dark ">
                     
                     <div class="content text-base-color">
                    
