charm design in footer

--- a/sluzby.html
+++ b/sluzby.html
@@ -295,7 +295,7 @@
 
                 <!-- Footer copyright -->
                 <div class="footer-copyright">
-                    <p>© 2025 CLARE - Interiors. Všechna práva vyhrazena.</p>
+                    <p>© 2025 Charm Design. Všechna práva vyhrazena.</p>
                 </div>
                 <!-- End footer copyright -->
 
