--- a/kontakt.html
+++ b/kontakt.html
@@ -145,22 +145,42 @@
                     <!-- end client item -->
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
-                        <a href="#"><img src="images/drevodeko.svg" class="h-75px" alt=""></a>
+                        <a href="#"><img src="images/egger.svg" class="h-75px" alt=""></a>
                     </div>
                     <!-- end client item -->
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
-                        <a href="#"><img src="images/drevodeko.svg" class="h-75px" alt=""></a>
+                        <a href="#"><img src="images/homapal.svg" class="h-75px" alt=""></a>
                     </div>
                     <!-- end client item -->
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
-                        <a href="#"><img src="images/drevodeko.svg" class="h-75px" alt=""></a>
+                        <a href="#"><img src="images/kronospan.svg" class="h-75px" alt=""></a>
                     </div>
                     <!-- end client item -->
                     <!-- start client item -->
                      <div class="col client-box text-center md-mb-40px">
-                        <a href="#"><img src="images/drevodeko.svg" class="h-75px" alt=""></a>
+                        <a href="#"><img src="images/syrovy.svg" class="h-75px" alt=""></a>
+                    </div> 
+                    <!-- end client item -->
+                        <!-- start client item -->
+                    <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="images/venus.png" class="h-75px" alt=""></a>
+                    </div>
+                    <!-- end client item -->
+                    <!-- start client item -->
+                    <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="images/vizuali.png" class="h-75px" alt=""></a>
+                    </div>
+                    <!-- end client item -->
+                    <!-- start client item -->
+                    <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="images/jeger.png" class="h-75px" alt=""></a>
+                    </div>
+                    <!-- end client item -->
+                    <!-- start client item -->
+                     <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="images/keraservis.png" class="h-75px" alt=""></a>
                     </div> 
                     <!-- end client item -->
                 </div>
