--- a/kontakt.html
+++ b/kontakt.html
@@ -171,7 +171,7 @@
                         <a href="#"><img src="images/venus.png" class="h-75px" alt=""></a>
                     </div>
             </div>  
-            <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0"></div> 
+            <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0">
                     <!-- end client item -->
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
