--- a/kontakt.html
+++ b/kontakt.html
@@ -135,8 +135,8 @@
        </div>   
     </div> 
     </div>
-    <div class="container">
-           <h3 class="fw-300 text-gradient-gold ls-minus-2px justify-content-center text-center mt-100px mb-105px">PARTNEŘI REALIZACÍ</h3> 
+    <div class="">
+           <h3 class="fw-300 text-gradient-gold ls-minus-2px justify-content-center text-center mt-100px mb-8">PARTNEŘI REALIZACÍ</h3> 
             <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0">
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
@@ -152,9 +152,7 @@
                     <div class="col client-box text-center md-mb-40px">
                         <a href="#"><img src="images/homapal.svg" class="w-170px" alt=""></a>
                     </div>
-                    <!-- end client item -->
-                        </div> 
-            <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0">
+                    <!-- end client item -->         
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
                         <a href="#"><img src="images/kronospan.svg" class="w-170px" alt=""></a>
@@ -165,14 +163,12 @@
                         <a href="#"><img src="images/syrovy.svg" class="w-170px" alt=""></a>
                     </div> 
                     <!-- end client item -->
-         
-            
+            </div> 
+            <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0"></div>
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
                         <a href="#"><img src="images/venus.png" class="w-100px" alt=""></a>
                     </div>
-            </div>  
-            <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0">
                     <!-- end client item -->
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
@@ -187,6 +183,11 @@
                     <!-- start client item -->
                      <div class="col client-box text-center md-mb-40px">
                         <a href="#"><img src="images/keraservis.png" class="w-170px" alt=""></a>
+                    </div> 
+                    <!-- end client item -->
+                        <!-- start client item -->
+                     <div class="col client-box text-center md-mb-40px">
+                        <a href="#"><img src="images/agc.svg" class="w-170px" alt=""></a>
                     </div> 
                     <!-- end client item -->
             </div>
