--- a/kontakt.html
+++ b/kontakt.html
@@ -164,7 +164,7 @@
                     </div> 
                     <!-- end client item -->
             </div> 
-            <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0"></div>
+            <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0">
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
                         <a href="#"><img src="images/venus.png" class="w-100px" alt=""></a>
