--- a/kontakt.html
+++ b/kontakt.html
@@ -135,9 +135,9 @@
        </div>   
     </div> 
     </div>
-    <div class="">
+    <div class="px-4 px-lg-5">
            <h3 class="fw-300 text-gradient-gold ls-minus-2px justify-content-center text-center mt-100px mb-8">PARTNEŘI REALIZACÍ</h3> 
-            <div class="row row-cols-1 w-70 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0">
+            <div class="row row-cols-1 row-cols-lg-5 row-cols-md-3 row-cols-sm-2 clients-style-06 justify-content-center mb-8 sm-mb-0">
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
                         <a href="#"><img src="images/drevodeko.svg" class="w-170px" alt=""></a>
