partner logo update

--- a/kontakt.html
+++ b/kontakt.html
@@ -160,7 +160,7 @@
                     <!-- end client item -->
                     <!-- start client item -->
                      <div class="col client-box text-center md-mb-40px">
-                        <a href="#"><img src="images/syrovy.svg" class="w-170px" alt=""></a>
+                        <a href="#"><img src="images/mysecret.svg" class="w-170px" alt=""></a>
                     </div> 
                     <!-- end client item -->
             </div> 
@@ -172,12 +172,12 @@
                     <!-- end client item -->
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
-                        <a href="#"><img src="images/vizuali.png" class="w-170px" alt=""></a>
+                        <a href="#"><img src="images/vizuali.svg" class="w-170px" alt=""></a>
                     </div>
                     <!-- end client item -->
                     <!-- start client item -->
                     <div class="col client-box text-center md-mb-40px">
-                        <a href="#"><img src="images/jeger.png" class="w-170px" alt=""></a>
+                        <a href="#"><img src="images/jeger.svg" class="w-170px" alt=""></a>
                     </div>
                     <!-- end client item -->
                     <!-- start client item -->
